# json-parser-c

./: .gitignore  CMakeLists.txt  Makefile
include/: ansi.h  array_list.h  error.h  lexer.h  parser.h  tokenizer.h  utf-8.h
src/: array_list.c  error.c  lexer.c  main.c  parser.c  tokenizer.c  utf-8.c
tests/: json_types.txt  simple_json.txt  utf-8_json.txt  utf-8_text.txt
